--- a/index.html
+++ b/index.html
@@ -127,11 +127,10 @@
                         <p class="p-apresentacao">Olá, eu sou a </p>
                         <span>Jessica Santos</span>
                         <h2>Desenvolvedora Front-End</h2>
-                        <p class="p-info">Sou uma Desenvolvedora em constante aprendizado e atualmente estou cursnado
+                        <p class="p-info">Sou uma Desenvolvedora em constante aprendizado e atualmente estou cursando
                             Análise e Desenvolvimento de Sistemas - FMU.
                             Tenho conhecimento em <span>HTML, CSS, JavaScript</span> e <span>React</span>.
-                            <br>Meu objetivo é criar interfaces de usuário intuitivas e eficientes, proporcionando
-                            uma ótima experiência para os usuários.
+                            <br>Meu objetivo é criar interfaces intuitivas e eficientes, para proporcionar uma ótima experiência para os usuários.
                         </p>
                     </div>
                     <div class="btn-home">
