change of text about

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Javascript -->
     <script defer src="/js/main.js"></script>
     <script defer src="/js/style-alternate.js"></script>
-    <script  defer src="js/app.js"></script>
+    <script defer src="js/app.js"></script>
 
 
 
@@ -170,29 +170,28 @@
 
                 <div class="texto-apresentacao">
                     <p class="p-about">Meu nome é <span>Jessica</span> ,</p>
-                    <p>Sou uma desenvolvedora front-end em aprendizado. Atualmente, estou cursando <span>Análise e
-                            Desenvolvimento de Sistemas </span> na FMU e tenho conhecimento em <span>HTML, CSS,
-                            JavaScript e React.</span>
-                        Além disso, estou sempre <span>aprimorando minhas habilidades</span> por meio de cursos em
-                        plataformas
-                        como Alura, DevMedia, Udemy, entre outras.
+                    <p>Sou desenvolvedora Front-End, apaixonada por transformar ideias em realidade digital. Minha
+                        jornada na programação começou graças ao incentivo do meu marido, e desde o momento em que vi a
+                        "mágica" de códigos se transformarem em páginas web funcionais, me apaixonei pelo universo da
+                        tecnologia.
                         <br>
                         <br>
-                        Embora eu ainda não tenha experiência profissional na área,<span>estou constantemente colocando
-                            em prática tudo o que aprendo</span>.
-                        Conheci a programação através do meu marido e me apaixonei ao ver como códigos podem ser
-                        transformado em uma pagina de site, o que me motivou a seguir essa carreira.
+                        Continuo <span>aprimorando minhas habilidades</span> através de cursos oferecidos em plataformas
+                        como Alura, DevMedia e Udemy, onde estou sempre <span>buscando novas técnicas e conhecimentos</span> para me
+                        manter atualizada com as tendências do mercado. Acredito que a educação contínua é essencial
+                        para crescer na carreira de desenvolvimento.
                         <br>
                         <br>
-                        Um dos meus objetivos futuros é fazer uma faculdade de Web Design, para combinar habilidades
-                        de programação com design e <span>criar interfaces ainda mais eficientes e intuitivas</span>.
-                        Meu grande
-                        objetivo é aprender ainda mais para proporcionar <span>melhores experiencias para os usuários
-                            através das paginas que eu desenvolver</span>.
+                        Um dos meus objetivos futuros é cursar uma faculdade de <span>Web Design</span>, com o intuito de combinar
+                        minhas habilidades em programação com um olhar mais apurado para o design. Quero criar
+                        <span>interfaces ainda mais eficientes e intuitivas</span>, oferecendo aos usuários experiências que sejam
+                        tanto funcionais quanto agradáveis.
                         <br>
                         <br>
-                        Estou em busca de novas oportunidades de trabalho para aplicar e expandir meu conhecimento,
-                        e estou animada para <span>contribuir com projetos desafiadores e inovadores</span>.
+                        Meu maior objetivo como desenvolvedora é trazer <span>melhores experiências aos usuários</span> por meio das
+                        páginas que eu desenvolver. Cada projeto é uma nova oportunidade de inovar e entregar algo que
+                        realmente faça a diferença.
+                        .
                     </p>
                 </div>
                 <div class="apresentacao-skill" id="skill">
