change of container skill

--- a/index.html
+++ b/index.html
@@ -163,12 +163,11 @@
         <!-- ====== Inicio da seção sobre ====== -->
         <section class="container-section container-about" id="about">
             <div class="about">
-                <h2>Sobre</h2>
+                <h2>Sobre Mim</h2>
             </div>
             <div class="apresentacao_e_skill">
 
                 <div class="texto-apresentacao">
-                    <p class="p-about">Meu nome é <span>Jessica</span> ,</p>
                     <p>Sou desenvolvedora Front-End, apaixonada por transformar ideias em realidade digital. Minha
                         jornada na programação começou graças ao incentivo do meu marido, e desde o momento em que vi a
                         "mágica" de códigos se transformarem em páginas web funcionais, me apaixonei pelo universo da
@@ -193,50 +192,26 @@
                         .
                     </p>
                 </div>
-                <div class="apresentacao-skill" id="skill">
-                    <span class="text-skill">Minhas Habilidades</span>
+                <div class="container_skill">
+                    <p class="text-skill">Minhas Habilidades</p>
                     <div class="skills">
-                        <div class="box-skill">
-                            <div class="nome-percentual">
-                                <p>Html</p>
-                                <p>100%</p>
-                            </div>
-                            <div class="bar-skill">
-                                <span class="skill-color-html"></span>
-                            </div>
-                            <!-- ----------------- -->
-                            <div class="nome-percentual">
-                                <p>CSS</p>
-                                <p>90%</p>
-                            </div>
-                            <div class="bar-skill">
-                                <span class="skill-color-css"></span>
-                            </div>
-                            <!-- ------------------- -->
-                            <div class="nome-percentual">
-                                <p>JavaScript</p>
-                                <p>50%</p>
-                            </div>
-                            <div class="bar-skill">
-                                <span class="skill-color-js"></span>
-                            </div>
-                            <!-- ------------------- -->
-                            <div class="nome-percentual">
-                                <p>React</p>
-                                <p>5%</p>
-                            </div>
-                            <div class="bar-skill">
-                                <span class="skill-color-react"></span>
-                            </div>
-                            <!-- -------------------- -->
-                            <div class="nome-percentual">
-                                <p>Angular</p>
-                                <p>1%</p>
-                            </div>
-                            <div class="bar-skill">
-                                <span class="skill-color-angular"></span>
-                            </div>
+                        <div class="skill">
+                            <i class='bx bxl-html5 icon_skill'></i>
+                            <p>HTML</p>
                         </div>
+                        <div class="skill">
+                            <i class='bx bxl-css3 icon_skill'></i>
+                            <p>CSS</p>
+                        </div>
+                        <div class="skill">
+                            <i class='bx bxl-javascript icon_skill'></i>
+                            <p>JAVASCRIPT</p>
+                        </div>
+                        <div class="skill">
+                            <i class='bx bxl-react icon_skill'></i>
+                            <p>REACT</p>
+                        </div>
+
                     </div>
                 </div>
             </div>
