--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <!-- Javascript -->
     <script defer src="/js/main.js"></script>
     <script defer src="/js/style-alternate.js"></script>
-    <script defer src="js/app.js"></script>
 
 
 
@@ -502,11 +501,11 @@
                         </div>
                     </div>
                     <div class="interface">
-                        <form   action="https://formsubmit.co/ajax/ 554a69cc2c0f952c9f7245e289409fd2 " method="POST" data-form>
+                        <form   action="" method="POST">
                             <input type="text" name="nome" placeholder="Seu nome" required autocomplete="off">
                             <input type="email" name="email" placeholder="Seu email" required autocomplete="off">
                             <textarea name="mensagem" placeholder="Digite sua mensagem aqui..." required></textarea>
-                            <button type="submit" data-button>Enviar</button>
+                            <button type="submit">Enviar</button>
                         </form>
                     </div>
                 </div>
