--- a/index.html
+++ b/index.html
@@ -93,13 +93,7 @@
                         </path>
                     </svg>
                 </a>
-                <a href="#contacts">
-                    <svg class="icon-redes-nav" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <path
-                            d="M20 4H4c-1.103 0-2 .897-2 2v12c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V6c0-1.103-.897-2-2-2zm0 2v.511l-8 6.223-8-6.222V6h16zM4 18V9.044l7.386 5.745a.994.994 0 0 0 1.228 0L20 9.044 20.002 18H4z">
-                        </path>
-                    </svg>
-                </a>
+              
                 <a href="https://api.whatsapp.com/send?phone=5511962046895&text=Ol%C3%A1,%20estou%20entrando%20em%20contato%20com%20voc%C3%AA%20atraves%20do%20link%20do%20seu%20portf%C3%B3lio."
                     target="_blank">
                     <svg class="icon-redes-nav" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -484,7 +478,11 @@
         </section>
         <!-- ===== Fim da seção Projetos -->
 
-        <!-- ====== Inicio da seção Contatos ====== -->
+        <footer>
+
+        </footer>
+
+        <!-- ====== Inicio da seção Contatos ======
         <section class="container-section" id="contacts">
             <div class="container-contacts">
                 <h2>Contatos</h2>
@@ -511,7 +509,7 @@
                 </div>
             </div>
 
-        </section>
+        </section> -->
 
         <div class="modos">
             <div class="container-icon dark-light" id="color_mode">
