--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </path>
                     </svg>
                 </a>
-              
+
                 <a href="https://api.whatsapp.com/send?phone=5511962046895&text=Ol%C3%A1,%20estou%20entrando%20em%20contato%20com%20voc%C3%AA%20atraves%20do%20link%20do%20seu%20portf%C3%B3lio."
                     target="_blank">
                     <svg class="icon-redes-nav" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -123,7 +123,8 @@
                         <p class="p-info">Sou uma Desenvolvedora em constante aprendizado e atualmente estou cursando
                             Análise e Desenvolvimento de Sistemas - FMU.
                             Tenho conhecimento em <span>HTML, CSS, JavaScript</span> e <span>React</span>.
-                            <br>Meu objetivo é criar interfaces intuitivas e eficientes, para proporcionar uma ótima experiência para os usuários.
+                            <br>Meu objetivo é criar interfaces intuitivas e eficientes, para proporcionar uma ótima
+                            experiência para os usuários.
                         </p>
                     </div>
                     <div class="btn-home">
@@ -168,18 +169,22 @@
                         <br>
                         <br>
                         Continuo <span>aprimorando minhas habilidades</span> através de cursos oferecidos em plataformas
-                        como Alura, DevMedia e Udemy, onde estou sempre <span>buscando novas técnicas e conhecimentos</span> para me
+                        como Alura, DevMedia e Udemy, onde estou sempre <span>buscando novas técnicas e
+                            conhecimentos</span> para me
                         manter atualizada com as tendências do mercado. Acredito que a educação contínua é essencial
                         para crescer na carreira de desenvolvimento.
                         <br>
                         <br>
-                        Um dos meus objetivos futuros é cursar uma faculdade de <span>Web Design</span>, com o intuito de combinar
+                        Um dos meus objetivos futuros é cursar uma faculdade de <span>Web Design</span>, com o intuito
+                        de combinar
                         minhas habilidades em programação com um olhar mais apurado para o design. Quero criar
-                        <span>interfaces ainda mais eficientes e intuitivas</span>, oferecendo aos usuários experiências que sejam
+                        <span>interfaces ainda mais eficientes e intuitivas</span>, oferecendo aos usuários experiências
+                        que sejam
                         tanto funcionais quanto agradáveis.
                         <br>
                         <br>
-                        Meu maior objetivo como desenvolvedora é trazer <span>melhores experiências aos usuários</span> por meio das
+                        Meu maior objetivo como desenvolvedora é trazer <span>melhores experiências aos usuários</span>
+                        por meio das
                         páginas que eu desenvolver. Cada projeto é uma nova oportunidade de inovar e entregar algo que
                         realmente faça a diferença.
                         .
@@ -217,7 +222,7 @@
             <div class="container-projects">
                 <h2>Projetos</h2>
                 <div class="box-projects" id="card">
-                    <!-- ----card ------------------- -->
+                    <!-- ----card - projeto cafeteria------------------- -->
                     <div class="card" id="card">
                         <div class="img">
                             <img src="/img/projeto-cafeteria.png" alt="">
@@ -264,7 +269,54 @@
                             </a>
                         </div>
                     </div>
-                    <!-- ----card ------------------- -->
+                    <!-- ----card projeto - sorveteria ------------------- -->
+                    <div class="card" id="card">
+                        <div class="img">
+                            <img src="/img/projeto_sorveteria.png" alt="">
+                        </div>
+                        <div class="content">
+                            <p>Linguagens:</p>
+                            <div class="linguagens-usadas">
+                                <svg class="icon-lg"  xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24">
+                                    <circle cx="12" cy="11.245" r="1.785"></circle>
+                                    <path
+                                        d="m7.002 14.794-.395-.101c-2.934-.741-4.617-2.001-4.617-3.452 0-1.452 1.684-2.711 4.617-3.452l.395-.1.111.391a19.507 19.507 0 0 0 1.136 2.983l.085.178-.085.178c-.46.963-.841 1.961-1.136 2.985l-.111.39zm-.577-6.095c-2.229.628-3.598 1.586-3.598 2.542 0 .954 1.368 1.913 3.598 2.54.273-.868.603-1.717.985-2.54a20.356 20.356 0 0 1-.985-2.542zm10.572 6.095-.11-.392a19.628 19.628 0 0 0-1.137-2.984l-.085-.177.085-.179c.46-.961.839-1.96 1.137-2.984l.11-.39.395.1c2.935.741 4.617 2 4.617 3.453 0 1.452-1.683 2.711-4.617 3.452l-.395.101zm-.41-3.553c.4.866.733 1.718.987 2.54 2.23-.627 3.599-1.586 3.599-2.54 0-.956-1.368-1.913-3.599-2.542a20.683 20.683 0 0 1-.987 2.542z">
+                                    </path>
+                                    <path
+                                        d="m6.419 8.695-.11-.39c-.826-2.908-.576-4.991.687-5.717 1.235-.715 3.222.13 5.303 2.265l.284.292-.284.291a19.718 19.718 0 0 0-2.02 2.474l-.113.162-.196.016a19.646 19.646 0 0 0-3.157.509l-.394.098zm1.582-5.529c-.224 0-.422.049-.589.145-.828.477-.974 2.138-.404 4.38.891-.197 1.79-.338 2.696-.417a21.058 21.058 0 0 1 1.713-2.123c-1.303-1.267-2.533-1.985-3.416-1.985zm7.997 16.984c-1.188 0-2.714-.896-4.298-2.522l-.283-.291.283-.29a19.827 19.827 0 0 0 2.021-2.477l.112-.16.194-.019a19.473 19.473 0 0 0 3.158-.507l.395-.1.111.391c.822 2.906.573 4.992-.688 5.718a1.978 1.978 0 0 1-1.005.257zm-3.415-2.82c1.302 1.267 2.533 1.986 3.415 1.986.225 0 .423-.05.589-.145.829-.478.976-2.142.404-4.384-.89.198-1.79.34-2.698.419a20.526 20.526 0 0 1-1.71 2.124z">
+                                    </path>
+                                    <path
+                                        d="m17.58 8.695-.395-.099a19.477 19.477 0 0 0-3.158-.509l-.194-.017-.112-.162A19.551 19.551 0 0 0 11.7 5.434l-.283-.291.283-.29c2.08-2.134 4.066-2.979 5.303-2.265 1.262.727 1.513 2.81.688 5.717l-.111.39zm-3.287-1.421c.954.085 1.858.228 2.698.417.571-2.242.425-3.903-.404-4.381-.824-.477-2.375.253-4.004 1.841.616.67 1.188 1.378 1.71 2.123zM8.001 20.15a1.983 1.983 0 0 1-1.005-.257c-1.263-.726-1.513-2.811-.688-5.718l.108-.391.395.1c.964.243 2.026.414 3.158.507l.194.019.113.16c.604.878 1.28 1.707 2.02 2.477l.284.29-.284.291c-1.583 1.627-3.109 2.522-4.295 2.522zm-.993-5.362c-.57 2.242-.424 3.906.404 4.384.825.47 2.371-.255 4.005-1.842a21.17 21.17 0 0 1-1.713-2.123 20.692 20.692 0 0 1-2.696-.419z">
+                                    </path>
+                                    <path
+                                        d="M12 15.313c-.687 0-1.392-.029-2.1-.088l-.196-.017-.113-.162a25.697 25.697 0 0 1-1.126-1.769 26.028 26.028 0 0 1-.971-1.859l-.084-.177.084-.179c.299-.632.622-1.252.971-1.858.347-.596.726-1.192 1.126-1.77l.113-.16.196-.018a25.148 25.148 0 0 1 4.198 0l.194.019.113.16a25.136 25.136 0 0 1 2.1 3.628l.083.179-.083.177a24.742 24.742 0 0 1-2.1 3.628l-.113.162-.194.017c-.706.057-1.412.087-2.098.087zm-1.834-.904c1.235.093 2.433.093 3.667 0a24.469 24.469 0 0 0 1.832-3.168 23.916 23.916 0 0 0-1.832-3.168 23.877 23.877 0 0 0-3.667 0 23.743 23.743 0 0 0-1.832 3.168 24.82 24.82 0 0 0 1.832 3.168z">
+                                    </path>
+                                </svg>
+
+                            </div>
+                        </div>
+                        <div class="btns-projetos">
+                            <a class="btn-proj" href="https://sorveteria-gelateria-kohl.vercel.app/" target="_blank">
+                                <svg class="icon-proj" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                    <path
+                                        d="M20 3H4c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h5v-2H4V7h16v12h-5v2h5c1.103 0 2-.897 2-2V5c0-1.103-.897-2-2-2z">
+                                    </path>
+                                    <path d="M13 21v-5h3l-4-5-4 5h3v5z"></path>
+                                </svg>
+                                <p>Ver</p>
+                            </a>
+                            <a class="btn-proj" href="https://github.com/jeesantilva/sorveteria_gelateria"
+                                target="_blank">
+                                <svg class="icon-proj" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z">
+                                    </path>
+                                </svg>
+                                <p>Code</p>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- ----card - projeto - clinica ------------------- -->
                     <div class="card" id="card">
                         <div class="img">
                             <img src="/img/projeto-clinica.png" alt="">
@@ -296,49 +348,6 @@
                                 <p>Ver</p>
                             </a>
                             <a class="btn-proj" href="https://github.com/jeesantilva/projeto-CMLife" target="_blank">
-                                <svg class="icon-proj" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z">
-                                    </path>
-                                </svg>
-                                <p>Code</p>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- ----card ------------------- -->
-                    <div class="card" id="card">
-                        <div class="img">
-                            <img src="/img/projeto-happy.png" alt="">
-                        </div>
-                        <div class="content">
-                            <p>Linguagens:</p>
-                            <div class="linguagens-usadas">
-                                <svg class="icon-lg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                    <path
-                                        d="M4.136 3.012h15.729l-1.431 16.15-6.451 1.826-6.414-1.826-1.433-16.15zm5.266 7.302-.173-2.035 7.533.002.173-1.963-9.87-.002.522 5.998h6.835l-.243 2.566-2.179.602-2.214-.605-.141-1.58H7.691l.247 3.123L12 17.506l4.028-1.08.558-6.111H9.402v-.001z">
-                                    </path>
-                                </svg>
-                                <svg class="icon-lg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                    <path
-                                        d="M4.192 3.143h15.615l-1.42 16.034-6.404 1.812-6.369-1.813L4.192 3.143zM16.9 6.424l-9.8-.002.158 1.949 7.529.002-.189 2.02H9.66l.179 1.913h4.597l-.272 2.62-2.164.598-2.197-.603-.141-1.569h-1.94l.216 2.867L12 17.484l3.995-1.137.905-9.923z">
-                                    </path>
-                                </svg>
-
-                            </div>
-                        </div>
-                        <div class="btns-projetos">
-                            <a class="btn-proj" href="https://jeesantilva.github.io/Projeto-HappyLanches/"
-                                target="_blank">
-                                <svg class="icon-proj" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                    <path
-                                        d="M20 3H4c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h5v-2H4V7h16v12h-5v2h5c1.103 0 2-.897 2-2V5c0-1.103-.897-2-2-2z">
-                                    </path>
-                                    <path d="M13 21v-5h3l-4-5-4 5h3v5z"></path>
-                                </svg>
-                                <p>Ver</p>
-                            </a>
-                            <a class="btn-proj" href="https://github.com/jeesantilva/Projeto-HappyLanches"
-                                target="_blank">
                                 <svg class="icon-proj" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                     <path fill-rule="evenodd" clip-rule="evenodd"
                                         d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z">
@@ -484,30 +493,6 @@
 
         <!-- ====== Inicio da seção Contatos ======
         <section class="container-section" id="contacts">
-            <div class="container-contacts">
-                <h2>Contatos</h2>
-                <div class="container-form">
-                    <div class="info-contacts">
-                        <h3>Contate-me</h3>
-                        <div class="pg-contacts">
-                            <p> Esse espaço é reservado exclusivamente para <span>recrutadores</span> e para solicitação
-                                de orçamentos de trabalhos <span>freelancers</span>.
-                            </p>
-                            <br>
-                            <p>Por favor, inclua seu <span>Nome</span> e <span>Endereço de e-mail</span> para que eu
-                                possa responder sua mensagem o mais breve possível</p>
-                        </div>
-                    </div>
-                    <div class="interface">
-                        <form   action="" method="POST">
-                            <input type="text" name="nome" placeholder="Seu nome" required autocomplete="off">
-                            <input type="email" name="email" placeholder="Seu email" required autocomplete="off">
-                            <textarea name="mensagem" placeholder="Digite sua mensagem aqui..." required></textarea>
-                            <button type="submit">Enviar</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
 
         </section> -->
 
