--- a/index.html
+++ b/index.html
@@ -31,13 +31,18 @@
             <div class="icon-menu">
                 <i class='bx bx-menu'></i>
             </div>
+            <!-- icon-rede-menu -->
             <div class="redes-sociais">
-                <a href="https://github.com/jeesantilva" target="_blank"><i
-                        class=' icon-rede-menu bx bxl-github'></i></a>
-                <a href=""><i class=' icon-rede-menu bx bx-envelope'></i></a>
+                <a href="https://github.com/jeesantilva" target="_blank">
+                    <i class='bx bxl-github icon-rede-menu' ></i>
+                </a>
+                <a href="www.linkedin.com/in/jessica-santos-devwoman" target="_blank">
+                    <i class='bx bxl-linkedin icon-rede-menu' ></i>
+                </a>
                 <a href="https://api.whatsapp.com/send?phone=5511962046895&text=Ol%C3%A1,%20estou%20entrando%20em%20contato%20com%20voc%C3%AA%20atraves%20do%20link%20do%20seu%20portf%C3%B3lio."
-                    target="_blank"><i class=' icon-rede-menu bx bxl-whatsapp'></i></a>
-
+                    target="_blank">
+                    <i class='bx bxl-whatsapp icon-rede-menu' ></i>
+                </a>
             </div>
         </div>
         <div class="menu_fixed">
