--- a/index.html
+++ b/index.html
@@ -206,6 +206,14 @@
                             <i class='bx bxl-wordpress icon_skill'></i>
                             <p>WORDPRESS</p>
                         </div>
+                        <div class="skill">
+                            <i class='bx bxl-sass icon_skill'></i>
+                            <p>SASS</p>
+                        </div>
+                        <div class="skill">
+                            <i class='bx bxl-tailwind-css icon_skill'></i>
+                            <p>TAILWIND</p>
+                        </div>
 
                     </div>
                 </div>
@@ -488,10 +496,6 @@
 
         </footer>
 
-        <!-- ====== Inicio da seção Contatos ======
-        <section class="container-section" id="contacts">
-
-        </section> -->
 
         <div class="modos">
             <div class="container-icon dark-light" id="color_mode">
