alterações em links e icons

--- a/index.html
+++ b/index.html
@@ -55,27 +55,15 @@
             <div class="menu-navegacao">
                 <nav id="nav">
                     <a class="link-nav" href="#home">
-                        <svg class="icon-link-nav" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                            <path
-                                d="m21.743 12.331-9-10c-.379-.422-1.107-.422-1.486 0l-9 10a.998.998 0 0 0-.17 1.076c.16.361.518.593.913.593h2v7a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-4h4v4a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-7h2a.998.998 0 0 0 .743-1.669z">
-                            </path>
-                        </svg>
+                        <i class='bx bxs-home-heart icon-link-nav' ></i>
                         <p>home</p>
                     </a>
                     <a class="link-nav" href="#about">
-                        <svg class="icon-link-nav" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                            <path
-                                d="M7.5 6.5C7.5 8.981 9.519 11 12 11s4.5-2.019 4.5-4.5S14.481 2 12 2 7.5 4.019 7.5 6.5zM20 21h1v-1c0-3.859-3.141-7-7-7h-4c-3.86 0-7 3.141-7 7v1h17z">
-                            </path>
-                        </svg>
+                        <i class='bx bxs-user icon-link-nav' ></i>
                         <p>sobre</p>
                     </a>
                     <a class="link-nav" href="#projects">
-                        <svg class="icon-link-nav" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                            <path
-                                d="m7.375 16.781 1.25-1.562L4.601 12l4.024-3.219-1.25-1.562-5 4a1 1 0 0 0 0 1.562l5 4zm9.25-9.562-1.25 1.562L19.399 12l-4.024 3.219 1.25 1.562 5-4a1 1 0 0 0 0-1.562l-5-4zm-1.649-4.003-4 18-1.953-.434 4-18z">
-                            </path>
-                        </svg>
+                        <i class='bx bx-code icon-link-nav' ></i>
                         <p>projetos</p>
                     </a>
                 </nav>
@@ -88,7 +76,7 @@
                 <a href="https://github.com/jeesantilva" target="_blank">
                     <i class='bx bxl-github icon-redes-nav' ></i>
                 </a>
-                <a href="www.linkedin.com/in/jessica-santos-devwoman" target="_blank">
+                <a href="https://www.linkedin.com/in/jessica-santos-devwoman/" target="_blank">
                     <i class='bx bxl-linkedin icon-redes-nav' ></i>
                 </a>
                 <a href="https://api.whatsapp.com/send?phone=5511962046895&text=Ol%C3%A1,%20estou%20entrando%20em%20contato%20com%20voc%C3%AA%20atraves%20do%20link%20do%20seu%20portf%C3%B3lio."
@@ -184,7 +172,7 @@
                     </p>
                 </div>
                 <div class="container_skill">
-                    <p class="text-skill">Minhas Habilidades</p>
+                    <p class="text-skill">Tecnologias</p>
                     <div class="skills">
                         <div class="skill">
                             <i class='bx bxl-html5 icon_skill'></i>
@@ -213,6 +201,14 @@
                         <div class="skill">
                             <i class='bx bxl-tailwind-css icon_skill'></i>
                             <p>TAILWIND</p>
+                        </div>
+                        <div class="skill">
+                            <i class='bx bxl-git icon_skill'></i>
+                            <p>GIT</p>
+                        </div>
+                        <div class="skill">
+                            <i class='bx bxl-github icon_skill'></i>
+                            <p>GITHUB</p>
                         </div>
 
                     </div>
@@ -255,21 +251,12 @@
                         <div class="btns-projetos">
                             <a class="btn-proj" href="https://jeesantilva.github.io/cafeteria_publicacao/"
                                 target="_blank">
-                                <svg class="icon-proj" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                    <path
-                                        d="M20 3H4c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h5v-2H4V7h16v12h-5v2h5c1.103 0 2-.897 2-2V5c0-1.103-.897-2-2-2z">
-                                    </path>
-                                    <path d="M13 21v-5h3l-4-5-4 5h3v5z"></path>
-                                </svg>
-                                <p>Ver</p>
+                                <i class='bx bx-link-external icon-proj '></i>
+                                <p>Deploy</p>
                             </a>
                             <a class="btn-proj" href="https://github.com/jeesantilva/cafeteria_publicacao"
                                 target="_blank">
-                                <svg class="icon-proj" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z">
-                                    </path>
-                                </svg>
+                                <i class='bx bxl-github icon-proj' ></i>
                                 <p>Code</p>
                             </a>
                         </div>
@@ -301,22 +288,14 @@
                             </div>
                         </div>
                         <div class="btns-projetos">
-                            <a class="btn-proj" href="https://sorveteria-gelateria-kohl.vercel.app/" target="_blank">
-                                <svg class="icon-proj" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                    <path
-                                        d="M20 3H4c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h5v-2H4V7h16v12h-5v2h5c1.103 0 2-.897 2-2V5c0-1.103-.897-2-2-2z">
-                                    </path>
-                                    <path d="M13 21v-5h3l-4-5-4 5h3v5z"></path>
-                                </svg>
-                                <p>Ver</p>
-                            </a>
-                            <a class="btn-proj" href="https://github.com/jeesantilva/sorveteria_gelateria"
+                            <a class="btn-proj" href="https://jeesantilva.github.io/cafeteria_publicacao/"
                                 target="_blank">
-                                <svg class="icon-proj" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z">
-                                    </path>
-                                </svg>
+                                <i class='bx bx-link-external icon-proj '></i>
+                                <p>Deploy</p>
+                            </a>
+                            <a class="btn-proj" href="https://github.com/jeesantilva/cafeteria_publicacao"
+                                target="_blank">
+                                <i class='bx bxl-github icon-proj' ></i>
                                 <p>Code</p>
                             </a>
                         </div>
@@ -343,21 +322,14 @@
                             </div>
                         </div>
                         <div class="btns-projetos">
-                            <a class="btn-proj" href="https://jeesantilva.github.io/projeto-CMLife/" target="_blank">
-                                <svg class="icon-proj" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                    <path
-                                        d="M20 3H4c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h5v-2H4V7h16v12h-5v2h5c1.103 0 2-.897 2-2V5c0-1.103-.897-2-2-2z">
-                                    </path>
-                                    <path d="M13 21v-5h3l-4-5-4 5h3v5z"></path>
-                                </svg>
-                                <p>Ver</p>
+                            <a class="btn-proj" href="https://jeesantilva.github.io/cafeteria_publicacao/"
+                                target="_blank">
+                                <i class='bx bx-link-external icon-proj '></i>
+                                <p>Deploy</p>
                             </a>
-                            <a class="btn-proj" href="https://github.com/jeesantilva/projeto-CMLife" target="_blank">
-                                <svg class="icon-proj" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z">
-                                    </path>
-                                </svg>
+                            <a class="btn-proj" href="https://github.com/jeesantilva/cafeteria_publicacao"
+                                target="_blank">
+                                <i class='bx bxl-github icon-proj' ></i>
                                 <p>Code</p>
                             </a>
                         </div>
@@ -384,23 +356,14 @@
                             </div>
                         </div>
                         <div class="btns-projetos">
-                            <a class="btn-proj" href="https://jeesantilva.github.io/project__cafeteria/"
+                            <a class="btn-proj" href="https://jeesantilva.github.io/cafeteria_publicacao/"
                                 target="_blank">
-                                <svg class="icon-proj" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                    <path
-                                        d="M20 3H4c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h5v-2H4V7h16v12h-5v2h5c1.103 0 2-.897 2-2V5c0-1.103-.897-2-2-2z">
-                                    </path>
-                                    <path d="M13 21v-5h3l-4-5-4 5h3v5z"></path>
-                                </svg>
-                                <p>Ver</p>
+                                <i class='bx bx-link-external icon-proj '></i>
+                                <p>Deploy</p>
                             </a>
-                            <a class="btn-proj" href="https://github.com/jeesantilva/project__cafeteria"
+                            <a class="btn-proj" href="https://github.com/jeesantilva/cafeteria_publicacao"
                                 target="_blank">
-                                <svg class="icon-proj" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z">
-                                    </path>
-                                </svg>
+                                <i class='bx bxl-github icon-proj' ></i>
                                 <p>Code</p>
                             </a>
                         </div>
@@ -427,21 +390,14 @@
                             </div>
                         </div>
                         <div class="btns-projetos">
-                            <a class="btn-proj" href="https://jeesantilva.github.io/visite-paraty/" target="_blank">
-                                <svg class="icon-proj" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                    <path
-                                        d="M20 3H4c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h5v-2H4V7h16v12h-5v2h5c1.103 0 2-.897 2-2V5c0-1.103-.897-2-2-2z">
-                                    </path>
-                                    <path d="M13 21v-5h3l-4-5-4 5h3v5z"></path>
-                                </svg>
-                                <p>Ver</p>
+                            <a class="btn-proj" href="https://jeesantilva.github.io/cafeteria_publicacao/"
+                                target="_blank">
+                                <i class='bx bx-link-external icon-proj '></i>
+                                <p>Deploy</p>
                             </a>
-                            <a class="btn-proj" href="https://github.com/jeesantilva/visite-paraty" target="_blank">
-                                <svg class="icon-proj" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z">
-                                    </path>
-                                </svg>
+                            <a class="btn-proj" href="https://github.com/jeesantilva/cafeteria_publicacao"
+                                target="_blank">
+                                <i class='bx bxl-github icon-proj' ></i>
                                 <p>Code</p>
                             </a>
                         </div>
@@ -467,22 +423,15 @@
 
                             </div>
                         </div>
-                        <div class="btns-projetos">
-                            <a class="btn-proj" href="https://jeesantilva.github.io/Imob-Project/" target="_blank">
-                                <svg class="icon-proj" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                    <path
-                                        d="M20 3H4c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h5v-2H4V7h16v12h-5v2h5c1.103 0 2-.897 2-2V5c0-1.103-.897-2-2-2z">
-                                    </path>
-                                    <path d="M13 21v-5h3l-4-5-4 5h3v5z"></path>
-                                </svg>
-                                <p>Ver</p>
+                          <div class="btns-projetos">
+                            <a class="btn-proj" href="https://jeesantilva.github.io/cafeteria_publicacao/"
+                                target="_blank">
+                                <i class='bx bx-link-external icon-proj '></i>
+                                <p>Deploy</p>
                             </a>
-                            <a class="btn-proj" href="https://github.com/jeesantilva/Imob-Project" target="_blank">
-                                <svg class="icon-proj" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z">
-                                    </path>
-                                </svg>
+                            <a class="btn-proj" href="https://github.com/jeesantilva/cafeteria_publicacao"
+                                target="_blank">
+                                <i class='bx bxl-github icon-proj' ></i>
                                 <p>Code</p>
                             </a>
                         </div>
